# progtech2

./: README.md  readme.md
challenge/w02_array_size/: w02_array_size_sol  w02_array_size_sol.cpp
challenge/w03_mid_point/: w03_mid_point.cpp  w03_mid_point_sol.cpp
challenge/w04_bug_hunt/solution/: CMakeLists.txt
challenge/w04_bug_hunt/solution/src/: CMakeLists.txt  main.cpp
challenge/w04_bug_hunt/solution/src/mymath/: CMakeLists.txt  factorial.hpp  factorial_take1.cpp  point_take2.hpp
challenge/w04_bug_hunt/solution/test/: .CMakeLists.txt.swp  CMakeLists.txt  factorial_take1.cpp  factorial_take2.cpp  main_test.cpp  point.cpp
challenge/w06_forward/: 06_forward.cpp  06_forward_solution.cpp
challenge/w07_fastest_penna/: animal.hpp  global.hpp  list_sim.hpp  main.cpp  sim.hpp  vec_sim.hpp  vec_slow_sim.hpp
challenge/w08_back_in_time/: 08_back_in_time.cpp  08_back_in_time_c++11.cpp  08_back_in_time_c++14.cpp  08_back_in_time_c++98.cpp
challenge/w09_thunder_struct/: Makefile  arena.cpp  board.hpp  bot_concept_wrapper.hpp  global.hpp
challenge/w09_thunderstruct/: Makefile  all_bots.hpp  arena.cpp  board.hpp  mkoenz.hpp  print_helper.hpp  thunder_struct.hpp  vs_score.cpp
challenge/w10_property/: initializer_order.cpp  proxy_object.cpp
challenge/w11_functional/: t03_contains.cpp  t04_avg.cpp  t05_pickout.scm  t06_sievelist.scl  t07_dot.ml  t08_fibo.erl  t09_prime.hs  t10_sqrt.clj
demonstration/: .gitignore
demonstration/vtable/: method_ptr.cpp
exercise/ackerman/: ackerman.cpp
exercise/ackermann/: ackermann_solution.cpp
exercise/c++17/: 01_static_assert.cpp  02_template_template.cpp  03_auto_init_list.cpp  04_uncaught_exception.cpp  05_nested_namespace.cpp  06_u8_literal.cpp  07_const_eval_for_non_type_tpl_args.cpp  08_folding_expressions.cpp  09_concept_lite.cpp
exercise/mtp/: meta_list.cpp  meta_list_sol.cpp
exercise/penna/: Makefile  README  bear.hpp  main.cpp  sheep.cpp  sheep.hpp
exercise/pennaLV/: .gitignore  CMakeLists.txt  COPYING  Makefile  README  bear.cpp  bear.hpp  main.cpp  sheep.cpp  sheep.hpp
exercise/pennaLV/doc/: CMakeLists.txt  Doxyfile.in
exercise/pennaLV/doc/include/: mainpage.md
exercise/pennaLV/src/: CMakeLists.txt  all_tests.cpp  animal_concept.hpp  main.cpp  main_test.cpp  sim_typedef.hpp  simulation.cpp  simulation.hpp
exercise/pennaLV/src/sim/: animal_concept.hpp  hdf5_support.hpp  sim_typedef.hpp  simulation.hpp  simulation_flat.hpp  type_list.hpp
exercise/pennaLV/src/zoo/: CMakeLists.txt  adapter.hpp  adapter_skeleton.hpp  animal.cpp  animal.hpp  animal_crtp.hpp  bear.cpp  bear.hpp  bear_test.cpp  counter_crtp.hpp  sheep.cpp  sheep.hpp  sheep_test.cpp  zoo.hpp
exercise/python/: Makefile  pennaLV_week03.py  penna_week01.py
exercise/regex_comp_time/: Makefile  README  fast.cpp  reg.cpp  reg.hpp  slow.cpp
exercise/tanks/: brave_tanks.cpp  safe_tanks.cpp
exercise/throw_in_dtor/: main.cpp
exercise/virtual_table/: base_slicing.cpp  vtable_reset.cpp
exercise/vtable/: crtp.cpp  main.cpp  veggies_crtp.hpp  vtable.cpp
exercise_sheet/: main.md
exercise_sheets/: main.md
slides/: main.md  readme.md
slides/slide_code_example_week08/: presentation.hpp
slides/slide_code_examples_week02/: auto_deduction.cpp  auto_use.cpp  constexpr.cpp  dd  decltype_deduction.cpp  decltype_motivation.cpp  default_delete.cpp  function.cpp  in_class_init_delegate_ctor.cpp  nullptr.cpp  pretty_type_print.hpp  random.cpp  simpson.hpp  simpson_example.cpp  standard_types.cpp  template_deduction.cpp  using.cpp
slides/slide_code_examples_week08/: 00_00_content.cpp  pres_print_type.hpp
task_sheets/: readme.md
tools/boost.python/: Makefile  run.py
tools/debugger/: 01_inf.cpp  02_vars.cpp  03_bounds.cpp  04_crash.cpp  README
tools/exercise_extern_tools/: measure_perf_demo.cpp  print_type_demo.cpp
tools/exercise_util/: measure_perf.cpp
tools/git/: bisect.sh
tools/sphinx/: .gitignore  main.py
tutorial/catch/: CMakeLists.txt  README
tutorial/catch/src/: CMakeLists.txt  main_test.cpp
tutorial/catch/src/prime/: isPrime.cpp  isPrime.hpp
tutorial/cmake/: ReadMe.txt
tutorial/cmake/v2_config/: CMakeLists.txt  tutorial_config.hpp  tutorial_config.hpp.in
tutorial/cmake/v3_library/: CMakeLists.txt  main.cpp
tutorial/cmake/v3_library/my_math_lib/: CMakeLists.txt
tutorial/cmake/v5_testing/: CMakeLists.txt  main.cpp  tutorial_config.hpp.in
tutorial/cmake/v5_testing/my_math_lib/: CMakeLists.txt
wiki/: build_system.md  debugger.md  documentation.md  licensing.md  main.md  profiler.md  readme.md  serialization.md  storage_serialization.md  style.md  testing_framework.md  versioning.md
(+97 files in other folders)
